fix cards display on mobile

--- a/style.css
+++ b/style.css
@@ -181,14 +181,13 @@ h4 {
   flex-wrap: wrap;
   justify-content: center;
   margin: 30px 0 0 25px;
-
 }
 
 .card {
   border: 1px solid #D1D2D3;
   height: 300px;
   margin: 10px;
-  flex: 10 5 300px;
+  flex: 10 5 30.6666%;
 }
 
 .card-title{
@@ -204,7 +203,7 @@ h4 {
 }
 
 .card1, .card7 {
-  flex: 10 5 630px;
+  flex: 10 5 63.7%;
 }
 
 @media screen and (max-width: 800px) {
@@ -234,6 +233,10 @@ h4 {
 }
 
 @media screen and (max-width: 645px) {
+
+  .card2, .card3, .card4, .card5 {
+    display: none;
+  }
 
   .divider {
     width: 60%;
@@ -349,6 +352,10 @@ h4 {
     height: 50px;
     margin: auto;
     margin-top: 30px;
+  }
+
+  .cards-container {
+    margin: 30px 0 0 0;
   }
 
   .cards {
